fix alignment margins for about page and experience page

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
 .about-page {
-  margin-top: 20px; /* Adjust the value to increase or decrease the gap */
+  margin-top: 10vh; /* Adjust the value to increase or decrease the gap */
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
 .experience-page {
-  margin-top: 35px; /* Adjust the value to increase or decrease the gap */
+  margin-top: 20vh; /* Adjust the value to increase or decrease the gap */
+  margin-left: 5%;
+  margin-right: 5%;
 }
